// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CopyPullSecret /> with error button should render 1`] = `
<Tooltip
  content="Copied!"
  isVisible={false}
  position="right"
  trigger="manual"
>
  <CopyToClipboard
    onCopy={[Function]}
    text=""
  >
    <Button
      icon={
        <PasteIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={true}
      tabIndex={0}
      type="button"
      variant="link"
    >
      Copy pull secret
    </Button>
  </CopyToClipboard>
</Tooltip>
`;

exports[`<CopyPullSecret /> with error link should render 1`] = `
<Tooltip
  content="Copied!"
  isVisible={false}
  position="right"
  trigger="manual"
>
  <CopyToClipboard
    onCopy={[Function]}
    text=""
  >
    <Button
      icon={
        <PasteIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={true}
      tabIndex={0}
      type="button"
      variant="link"
    >
      Copy pull secret
    </Button>
  </CopyToClipboard>
</Tooltip>
`;

exports[`<CopyPullSecret /> with token button should render 1`] = `
<CopyToClipboard
  onCopy={[Function]}
  text="{\\"auths\\":{\\"foo\\":\\"bar\\"}}
"
>
  <Button
    isDisabled={false}
    tabIndex={0}
    type="button"
    variant="secondary"
  >
    Copy pull secret
  </Button>
</CopyToClipboard>
`;

exports[`<CopyPullSecret /> with token link should render 1`] = `
<Tooltip
  content="Copied!"
  isVisible={false}
  position="right"
  trigger="manual"
>
  <CopyToClipboard
    onCopy={[Function]}
    text="{\\"auths\\":{\\"foo\\":\\"bar\\"}}
"
  >
    <Button
      icon={
        <PasteIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={false}
      tabIndex={0}
      type="button"
      variant="link"
    >
      Copy pull secret
    </Button>
  </CopyToClipboard>
</Tooltip>
`;
